--- a/LSTM_Study.ipynb
+++ b/LSTM_Study.ipynb
@@ -825,7 +825,7 @@
         "    \"\"\"Convert normalized value in [-1,1] back to original scale.\"\"\"\n",
         "    return ((y_norm + 1) / 2) * (orig_max - orig_min) + orig_min\n",
         "\n",
-        "#--\n",
+        "#Persistence\n",
         "\n",
         "# Prepare array for persistence predictions on test set\n",
         "y_pred_persist = np.zeros_like(y_test)  # shape (N_test_days, 11)\n",
@@ -845,7 +845,7 @@
         "\n",
         "print(f\"Persistence model – Test RMSE: {rmse_persist:.3f} W/m²\")\n",
         "\n",
-        "#--\n",
+        "#Linear Model\n",
         "\n",
         "# Flatten the feature and target arrays for training and testing\n",
         "X_train_flat = X_train.reshape(-1, 9)   # shape: (N_train_days*11, 9)\n",
@@ -868,7 +868,7 @@
         "\n",
         "print(f\"Linear Regression – Test RMSE: {rmse_test_lr:.3f} W/m²\")\n",
         "\n",
-        "#--\n",
+        "#BPNN\n",
         "\n",
         "# Lists to store RMSE values for each run\n",
         "test_rmse_list = []\n",
@@ -892,7 +892,7 @@
         "\n",
         "print(f\"BPNN – Test RMSE: {test_rmse_mean:.3f} ± {test_rmse_std:.3f} W/m²\")\n",
         "\n",
-        "#--\n",
+        "#LSTM\n",
         "\n",
         "# LSTM model training and evaluation\n",
         "rmse2 = 0\n",
